force-app/main/default/objects/AISettings__mdt/AISettings__mdt.object-meta.xml
<CustomObject>
    <label>AI Setting</label>
    <pluralLabel>AI Settings</pluralLabel>
</CustomObject>