force-app/main/default/objects/AISettings__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>The number of photos to process per auth token</description>
    <inlineHelpText>The number of photos to process per auth token</inlineHelpText>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>