force-app/main/default/objects/AISettings__mdt/fields/EinsteinPem__c.field-meta.xml
<CustomField>
    <fullName>EinsteinPem__c</fullName>
    <description>private key</description>
    <inlineHelpText>private key</inlineHelpText>
    <label>EinsteinPem</label>
    <length>8019</length>
    <type>LongTextArea</type>
</CustomField>