force-app/main/default/objects/AISettings__mdt/fields/PhotoModelName__c.field-meta.xml
<CustomField>
    <fullName>PhotoModelName__c</fullName>
    <description>Photo Model Name</description>
    <label>Image Classifier Model Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>