force-app/main/default/objects/AISettings__mdt/fields/ServiceUrl__c.field-meta.xml
<CustomField>
    <fullName>ServiceUrl__c</fullName>
    <description>AI service entry URL</description>
    <label>Service Url</label>
    <type>Url</type>
</CustomField>