force-app/main/default/objects/AISettings__mdt/fields/TokenUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenUrl__c</fullName>
    <description>An entry point url to the access token</description>
    <label>Token Url</label>
    <type>Url</type>
</CustomField>