force-app/main/default/objects/AISettings__mdt/fields/TokenValidForInMinutes__c.field-meta.xml
<CustomField>
    <fullName>TokenValidForInMinutes__c</fullName>
    <description>oauth token valid duration in minutes</description>
    <label>Token Valid Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>